Creada la clase ProcessTable.

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,8 @@
        body {
           padding-top: 50px;
        }
-       .starter-template {
+       .main-container{
           padding-top: 40px;
-          text-align: center;
        }
     </style>
 
