Ahora las vistas de grafo y tabla se agregan al contenedor correcto. Tanto este como el form de configuracion ahora se muestran correctamente alineados.

--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,8 @@
     </div>
 
     <div class="container">
-
-      <div class="main-container">
-      </div>
-
+       <div class="row row-offcanvas row-offcanvas-right main-container">
+       </div>
     </div><!-- /.container -->
 
 
