--- a/src/nw-main.html
+++ b/src/nw-main.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <script type="text/javascript">
-         window.location = "http://127.0.0.1:8080/"
+   <script type="text/javascript">
+      setTimeout(function () {
+            window.location = "http://127.0.0.1:8080/";
+            }, 1000);
       </script>
   </head>
   <body>
+     <h2>ConcuDebug</h2><h4>(hay que cambiarle el nombre a esto)</h4>
   </body>
 </html>
 
