--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand">C-GDB</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="#ipc">IPC</a></li>
+            <li><a href="#agregar">Agregar Proceso</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
