Creados unos scripts para detectar cambios en los archivos js y py y automaticamente recargar la aplicacion. Los scripts son lanzados por el start.sh y requirio el agregado de un pequeño codigo en el index.html.

--- a/src/index.html
+++ b/src/index.html
@@ -77,5 +77,15 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script data-main="js/main.js" src="js/external/require.js"></script>
+    <script>
+       (function () {
+          var path = './update';
+          var fs = require('fs');
+
+          fs.watch(path, [], function() {
+            require('nw.gui').Window.get().reload(3);
+          });
+       })();
+    </script>
   </body>
 </html>
