--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="resources/css/bootstrap.css" rel="stylesheet">
     <link href="resources/css/w2ui-1.3.2.css" rel="stylesheet">
+    <link href="resources/css/jquery-ui.structure.min.css" rel="stylesheet">
 
 
     <style>
