Integrado los theme de jquery-ui con los del w2ui. issue #35.

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,12 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="resources/css/bootstrap.css" rel="stylesheet">
+    <!-- <link href="resources/css/bootstrap.css" rel="stylesheet"> -->
     <link href="resources/css/w2ui-1.3.2.css" rel="stylesheet">
     <link href="resources/css/jquery-ui.structure.min.css" rel="stylesheet">
+    
+    <link href="resources/css/theme/blitzer/jquery-ui.theme.css" rel="stylesheet">
+    <link href="resources/css/theme/oldos/jquery-ui.theme.css" rel="stylesheet">
 
 
     <style>
