El layout ahora ocupa todo el espacio disponible del browser.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <!-- <link href="resources/css/bootstrap.css" rel="stylesheet"> -->
+    <link href="resources/css/bootstrap.css" rel="stylesheet">
     <link href="resources/css/w2ui-1.3.2.css" rel="stylesheet">
     <link href="resources/css/jquery-ui.structure.min.css" rel="stylesheet">
     
@@ -19,13 +19,11 @@
 
 
     <style>
-       .main-container{
-          padding-top: 40px;
-       }
-
        .fixed-position {
           position: absolute;
        }
+
+       html, body {height: 100%}
 
     </style>
 
