--- a/src/splash.html
+++ b/src/splash.html
@@ -14,6 +14,14 @@
           overflow: hidden;
        }
     </style>
+    <script>
+      // Timeout, close the splash window after a while
+      setTimeout(function () {
+         var my_window = require('nw.gui').Window.get();
+         my_window.hide();
+         my_window.close(true);
+      }, 60000);
+    </script>
   </head>
 
   <body>
