Implementado un Docks, un objeto que define zonas donde se pueden droppear las tabs de un Tabbed y se ejecuta un split (Splitted). Es solo una primera aproximacion.

--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,17 @@
           background: rgba(255,255,0,0.4); 
        }
 
+       /* Dock side */
+       div.dock_side {
+          position: absolute;
+          display: block;
+          right: 0px;
+          bottom: 0px;
+          background-color: rgba(188, 213, 230, 0.5);
+          text-align: center;
+          z-index: 999;
+       }
+
     </style>
 
   </head>
