Creado un nuevo tipo de panel que permite stackear varios sub panels sin la necesidad de una barra separadora variable. (issue #68).

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <link title="oldos"   href="resources/css/theme/oldos/jquery-ui.theme.css"   rel="alternate stylesheet">
 
     <link href="resources/css/splitted.css" rel="stylesheet">
+    <link href="resources/css/stacked.css" rel="stylesheet">
     <style>
        /* The selections of ACE require this */
        .fixed-position {
