Ahora las barras de los Splitteds son invisibles, quedando esteticamente mejor. Cuando se pasa el mouse por ensima o se las activa arrastrandolas, automaticamente se hacen visibles para dar un mejor feedback al usuario. Agregadas unas clases de jquery-ui a Stacked para  que tenga  un look and feel similar a los Tabbed.

--- a/src/index.html
+++ b/src/index.html
@@ -99,11 +99,15 @@
           z-index: 999;
        }
 
+       .bar_of_splitted_transparent {
+          background: transparent !important;
+          border: 1px solid transparent !important;
+       }
     </style>
 
   </head>
 
-  <body>
+  <body class="ui-widget-content" style="border: 0px;">
 
 
     <!-- Bootstrap core JavaScript
