Solo por diversion, otra imagen como splash (sacada de pixabay).

--- a/src/splash.html
+++ b/src/splash.html
@@ -20,12 +20,12 @@
          var my_window = require('nw.gui').Window.get();
          my_window.hide();
          my_window.close(true);
-      }, 60000);
+      }, 30000);
     </script>
   </head>
 
   <body>
-     <img height="200" width="230" alt="loading..." src="resources/splash.png">
+     <img alt="loading..." src="resources/splash.png">
      <span id="status">Loading...</span>
   </body>
 </html>
