Creada la vista de los debuggers y threads con una vista de arbol usando jsTree.

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
     <!-- Bootstrap core CSS -->
     <link href="resources/css/bootstrap.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="resources/css/jstree-themes/default-dark/style.css" />
+
     <link href="resources/css/jquery-ui.structure.css" rel="stylesheet">
     
 
