Creado un Code Editor (en reemplazo del CodeView). Agregada una font y agregados algunos metodos extra en ThreadGroup.

--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,11 @@
           fill: #000000;
        }
 
+       /* Fonts for the code editors */
+        @font-face {
+            font-family: 'monaco';
+            src: url('resources/fonts/monaco/monaco.ttf') format('truetype');
+        }
     </style>
 
   </head>
