Primeras versiones de las css para los breakpoints y otros marcadores en el codigo.

--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,19 @@
     border: none;
     background-image: none;
 }
+       
+       .code-editor-marker {
+          position: absolute;
+          z-index:20;
+       }
+
+       .code-editor-breakpoint {
+          background: linear-gradient(to right, rgba(0,0,0,0) , red);
+       }
+       
+       .code-editor-thread-current-line {
+          background: linear-gradient(to right, rgba(0,0,0,0) , blue);
+       }
 
     </style>
 
