--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
        }
        
        .code-editor-thread-current-line {
-          background: linear-gradient(to right, rgba(0,0,0,0) , blue);
+          background: linear-gradient(to right, rgba(0,0,0,0) , rgb(95, 162, 219));
        }
 
     </style>
