Removido el metodo Return de la botonera (no soportado por no generar eventos de stopped/running lo que hace que el tracker se desincronice). Primera version de una linea resaltada que permite agregar anotaciones en el editor Ace.

--- a/src/splash.html
+++ b/src/splash.html
@@ -20,6 +20,7 @@
          var my_window = require('nw.gui').Window.get();
          my_window.hide();
          my_window.close(true);
+         my_window = null;
       }, 30000);
     </script>
   </head>
