Agregado un par de fixes al css de jstree para darle soporte a nodos con textos multilinea.

--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,21 @@
           background: linear-gradient(to right, rgba(0,0,0,0) , rgb(95, 162, 219));
        }
 
+       .jstree-default a { 
+            white-space:normal !important; height: auto; 
+        }
+        .jstree-anchor {
+            height: auto !important;
+        }
+        .jstree-default li > ins { 
+            vertical-align:top; 
+        }
+        .jstree-leaf {
+            height: auto;
+        }
+        .jstree-leaf a{
+            height: auto !important;
+        }
     </style>
 
   </head>
