Minimo fix en breakpoint view.

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
 
     </style>
     <style>
+
        /* The selections of ACE require this */
        .fixed-position {
           position: absolute;
@@ -136,6 +137,7 @@
           background: linear-gradient(to right, rgba(0,0,0,0) , rgb(95, 162, 219));
        }
 
+       /* Used this so jstree can support multiline texts in the nodes */
        .jstree-default a { 
             white-space:normal !important; height: auto; 
         }
@@ -151,6 +153,7 @@
         .jstree-leaf a{
             height: auto !important;
         }
+
     </style>
 
   </head>
