--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="resources/css/bootstrap.css" rel="stylesheet">
+    <link href="resources/css/context.standalone.css" rel="stylesheet">
 
     <link rel="stylesheet" href="resources/css/jstree-themes/default-dark/style.css" />
 
