Mejorado el sistema de loggeo y mensajeria. Cambiado ademas sus estilos.

--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,15 @@
 
     <!-- Bootstrap core CSS -->
     <link href="resources/css/bootstrap.css" rel="stylesheet">
+    <link href="resources/css/bootstrap-theme.css" rel="stylesheet">
     <link href="resources/css/context.standalone.css" rel="stylesheet">
 
     <link rel="stylesheet" href="resources/css/jstree-themes/default-dark/style.css" />
 
     <link href="resources/css/jquery-ui.structure.css" rel="stylesheet">
     
-
     <link title="uidark"  href="resources/css/theme/uidark/jquery-ui.theme.css"  rel="stylesheet">
-    <link title="blitzer" href="resources/css/theme/blitzer/jquery-ui.theme.css" rel="alternate stylesheet">
-    <link title="le_frog" href="resources/css/theme/le_frog/jquery-ui.theme.css" rel="alternate stylesheet">
-    <link title="oldos"   href="resources/css/theme/oldos/jquery-ui.theme.css"   rel="alternate stylesheet">
+    <link title="uidark"  href="resources/css/theme/uidark/notify-uidark.css"  rel="stylesheet">
 
     <link href="resources/css/splitted.css" rel="stylesheet">
     <link href="resources/css/stacked.css" rel="stylesheet">
