Ejemplo mostrado en el issue #108 andando en nw.

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
     <link href="resources/css/scrollbar.css" rel="stylesheet">
     
     <link href="resources/css/icons/font-awesome-4.4.0.min.css" rel="stylesheet">
+    
+    <!-- ProcessView CSS -->
+     <link href="resources/css/processView.css" rel="stylesheet">
 
     <style>
 /* Allow Font Awesome Icons in lieu of jQuery UI and only apply when using a FA icon */
