--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,9 @@
     </style>
   </head>
 
-  <body class="ui-widget-content" style="border: 0px;">
+  <body class="ui-widget-content" style='border: 0px;'>
+  <!-- image egg? <img src="resources/dl.png" style="position: absolute; left: 100%; height: 100%;" /> -->
+  <span id="main"></span>
     <script data-main="js/main.js" src="js/external/require.js"></script>
     <script>
        (function () {
