Agregada la posibilidad de hacer que el texto en los logs sea seleccionable y por ende copiable.

--- a/src/index.html
+++ b/src/index.html
@@ -95,8 +95,8 @@
           background: linear-gradient(to right, rgba(0,0,0,0) , rgb(95, 162, 219));
        }
 
-       .slickgrid-cell-full-width-expand {
-           width: 100%;
+       .selectable_text {
+           -webkit-user-select: text;
        }
 
     </style>
