Agregado los css de xterm.

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     <link href="resources/css/jstree-multiline-fix.css" rel="stylesheet">
     
     <link href="resources/css/slick.grid.css" rel="stylesheet">
+    <link href="resources/css/xterm.css" rel="stylesheet">
 
     <style>
 
