Arreglados unos issues en el thread follower, thread button bar y code selector. Mejorada la ui, agregado un estilo para el code selector. Minimas mejoras en el code editor.

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
     
     <link href="resources/css/slick.grid.css" rel="stylesheet">
     <link href="resources/css/xterm.css" rel="stylesheet">
+    
+    <link href="resources/css/code_selector.css" rel="stylesheet">
 
     <style>
 
