Mejorada la estetica de los tabs.

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <link href="resources/css/splitted.css" rel="stylesheet">
     <link href="resources/css/stacked.css" rel="stylesheet">
     <link href="resources/css/scrollbar.css" rel="stylesheet">
+    <link href="resources/css/tabbed.css" rel="stylesheet">
     
     <link href="resources/css/icons/font-awesome-4.4.0.min.css" rel="stylesheet">
     
